#16 Adapt for mobile browsers

--- a/templates/default.html
+++ b/templates/default.html
@@ -2,7 +2,8 @@
 <html lang="ru">
     <head>
         <meta charset="utf-8" />
-        <title>Also spricht Kirikaza :: $title$</title>
+	<meta name="viewport" content="width=device-width, initial-scale=1" />
+	<title>Also spricht Kirikaza :: $title$</title>
 	<link href="https://fonts.googleapis.com/css?family=PT+Serif+Caption" rel="stylesheet" />
         <link rel="stylesheet" type="text/css" href="/styles/default.css" />
 	$if(googleAnalyticsID)$ 
