--- a/styles/default.css
+++ b/styles/default.css
@@ -24,6 +24,10 @@ pre, code {
     font-size: 16px;
 }
 
+pre {
+    overflow-x: scroll;
+}
+
 header {
     border-bottom: 1px solid silver;
     margin-top: 30px;
